upd: fixed the issue of footer coming above on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -239,8 +239,10 @@ footer {
 /* SIGN IN Page */
 
 .auth-form-cont {
-  height: calc(100dvh - 80.8px - 80px);
-  min-height: 100%;
+  min-height: calc(100dvh - 80.8px - 80px); /* where, 80.8px and 80px are the heights of the header and footer respectively */
+  @media (max-width: 425px) {
+    height: calc(135.5dvh - 80.8px - 80px);
+  }
   display: flex;
   justify-content: center;
   align-items: center;
